--- a/Basic-HTML-Bio.html
+++ b/Basic-HTML-Bio.html
@@ -90,7 +90,7 @@
     </tfoot>
   </table>
 
-  <a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">New page</a>
+  <a href="my-first-bonus.html">New page</a>
 
 </body>
 
